# json-api-builder

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-publish.yml
docs/: api_reference.md  database.md  database_schema.md
docs/inquiries/: 20250702_inquiry_response.md  20250705_inquiry_summary.md
docs/issues/: json_api_builder_improvement_proposal.md  json_api_builder_inquiry.md
examples/: basic_example.py  download_example.py  json_export_example.py  render_example.py  simple_example.py
json_api_builder/: __init__.py  api_builder.py  builder.py  crud.py  database.py  db_download.py  db_generator.py  json_export.py  json_import.py  models.py  router.py
scripts/: build.py  test.py
src/json_api_builder/: __init__.py  api_builder.py
tests/: conftest.py  test_api_builder.py  test_data_operations.py  test_db_generator.py  test_json_export.py  test_json_import.py  test_main.py
