[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-api-builder"
version = "0.1.0"
description = "JSONデータ保存に特化したFastAPIサーバーを簡単に構築できるPythonライブラリ"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "json-api-builder", email = "info@json-api-builder.com" },
]
keywords = ["fastapi", "json", "api", "builder", "sqlite", "crud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.24.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.10.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/json-api-builder/json-api-builder"
Documentation = "https://json-api-builder.readthedocs.io/"
Repository = "https://github.com/json-api-builder/json-api-builder.git"
Issues = "https://github.com/json-api-builder/json-api-builder/issues"

[tool.hatchling.build.targets.wheel]
packages = ["src/json_api_builder"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["json_api_builder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] 