[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-api-builder"
version = "0.3.0"
description = "A simple library to build robust REST APIs with automatic CRUD endpoints using FastAPI, SQLModel, and FastCRUD."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "json-api-builder-project", email = "info@example.com" },
]
keywords = ["fastapi", "sqlmodel", "fastcrud", "crud", "rest", "api", "builder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.19",
    "fastcrud>=0.11.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy-utils<0.42,>=0.41.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mypy",
    "ruff",
    "vulture",
]

[project.urls]
Homepage = "https://github.com/your-username/json-api-builder"
Repository = "https://github.com/your-username/json-api-builder.git"

[tool.hatchling.build.targets.wheel]
packages = ["json_api_builder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "T20"]
ignore = ["E501", "B008", "C901", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"json_api_builder/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
